--- a/styles/components/stories.css
+++ b/styles/components/stories.css
@@ -1,29 +1,30 @@
-.stories {
+.my-stories {
 }
-.main__stories {
+.main__my-stories {
 }
-.stories__container {
+.my-stories__container {
     padding-top: 60px;
     padding-bottom: 80px;
 }
-.stories__inner {
+.my-stories__inner {
 }
-.stories__swiper {
+.my-stories__swiper {
+    overflow: hidden!important;
 }
-.stories__swiper-wrapper {
+.my-stories__swiper-wrapper {
 }
-.stories__swiper-slide {
+.my-stories__swiper-slide {
     max-width: 99px;
     cursor: pointer;
 }
-.stories__slide {
+.my-stories__slide {
     max-width: 99px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 12px;
 }
-.stories__slide-img-wrap {
+.my-stories__slide-img-wrap {
     height: 99px;
     max-width: 99px;
     width: 100%;
@@ -33,80 +34,146 @@
     padding: 4px;
     background-color: #FFF;
 }
-.stories__slide-img {
+.my-stories__slide-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 50%;
 }
-.stories__title {
+.my-stories__title {
     font-size: 14px;
+    font-weight: 500!important;
     line-height: 130%;
 }
 
+/* ИЗМЕНЕНИЕ СТИЛЕЙ БИБЛИОТЕКИ */
+.stories.carousel {
+    display: flex;
+    gap: 18px;
+}
+.stories.carousel .story {
+    max-width: 100px;
+    width: 100px;
+    margin: 0px;
+}
+.stories.carousel .story > .item-link > .item-preview {
+    max-height: 100px;
+    height: 100px;
+    border: 1px solid #4E6932;
+    padding: 0px;
+}
+.stories.carousel .story > .item-link > .info {
+    font-size: 14px;
+    line-height: 130%;
+    margin-top: 12px;
+}
+
+
 @media (max-width: 1361px) {
-    .stories {
+    .my-stories {
         padding-top: 60px;
         padding-bottom: 80px;
     }
-    .stories__container {
+    .my-stories__container {
         padding-top: 0px;
         padding-bottom: 0px;
     }
-    .stories__swiper {
-        overflow: visible;
+    .my-stories__swiper {
+        overflow: visible!important;
     }
 }
 
 @media (max-width: 1281px) {
-    .stories {
+    .my-stories {
         padding-bottom: 70px;
     }
-    .stories__swiper-slide {
+    .my-stories__swiper-slide {
         max-width: 94px;
     }
-    .stories__slide-img-wrap {
+    .my-stories__slide-img-wrap {
         height: 94px;
         max-width: 94px;
     }
+    .stories.carousel {
+        gap: 16px;
+    }
+    .stories.carousel .story {
+        max-width: 94px;
+        width: 94px;
+    }
+    .stories.carousel .story > .item-link > .item-preview {
+        max-height: 94px;
+        height: 94px;
+    }
 }
 @media (max-width: 992px) {
-    .stories {
+    .my-stories {
         padding-top: 60px;
     }
 }
 @media (max-width: 769px) {
-    .stories {
+    .my-stories {
         padding-top: 60px;
         padding-bottom: 0px;
     }
-    .stories__title {
+    .my-stories__title {
         font-size: 13px;
     }
-    .stories__swiper-slide {
+    .my-stories__swiper-slide {
         max-width: 91px;
     }
-    .stories__slide-img-wrap {
+    .my-stories__slide-img-wrap {
         height: 91px;
         max-width: 91px;
+    }
+    .stories.carousel {
+        gap: 17px;
+    }
+    .stories.carousel .story {
+        max-width: 91px;
+        width: 91px;
+    }
+    .stories.carousel .story > .item-link > .item-preview {
+        max-height: 91px;
+        height: 91px;
+    }
+    .stories.carousel .story > .item-link > .info {
+        font-size: 13px;
     }
 }
 
 @media (max-width: 651px) {
-
+    .stories.carousel {
+        gap: 16px;
+    }
 }
+
 @media (max-width: 551px) {
-    .stories__swiper-slide {
+    .my-stories__swiper-slide {
         max-width: 88px;
     }
-    .stories__slide-img-wrap {
+    .my-stories__slide-img-wrap {
         height: 88px;
         max-width: 88px;
+    }
+    .stories.carousel {
+        gap: 15px;
+    }
+    .stories.carousel .story {
+        max-width: 88px;
+        width: 88px;
+    }
+    .stories.carousel .story > .item-link > .item-preview {
+        max-height: 88px;
+        height: 88px;
     }
 }
 
 @media (max-width: 431px) {
-    .stories__title {
+    .my-stories__title {
+        font-size: 12px;
+    }
+    .stories.carousel .story > .item-link > .info {
         font-size: 12px;
     }
 }
