--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -1,3 +1,8 @@
+.hero-section__wrap-img {
+    background: url('../../assets/images/pages/about/hero-section/block-img.jpg') 100% no-repeat;
+    background-size: cover;
+}
+
 /* БЛОК "О НАС" */
 .about-info {
 }
