--- a/styles/pages/development-center.css
+++ b/styles/pages/development-center.css
@@ -1,3 +1,8 @@
+.hero-section__wrap-img {
+    background: url('../../assets/images/pages/development-center/hero-section/block-img.jpg') 100% no-repeat;
+    background-size: cover;
+}
+
 @media (max-width: 431px) {
     .hero-section__link > br {
         display: block;
