--- a/styles/components/sections/hero-section.css
+++ b/styles/components/sections/hero-section.css
@@ -174,10 +174,14 @@
     max-height: 540px;
     max-width: 610px;
     border-radius: 24px;
-    background: url('../../../assets/images/pages/main/hero-section/hero-section-img.png') 100% no-repeat;
-    background-size: cover;
     height: 540px;
     width: 100%;
+    overflow: hidden;
+}
+.hero-section__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media (max-width: 1340px) {
