--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -139,10 +139,14 @@
     max-height: 560px;
     max-width: 628px;
     border-radius: 24px;
-    background: url('../../assets/images/pages/main/hero-section/hero-section-img.png') 100% no-repeat;
-    background-size: cover;
     height: 560px;
     width: 100%;
+    overflow: hidden;
+}
+.hero-section__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media (max-width: 1340px) {
