--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -324,7 +324,7 @@
     }
     .header__link-phone {
         font-size: 15px;
-        padding: 10px 18px;
+        padding: 12px 20px;
     }
 }
 @media (max-width: 430px) {
@@ -332,7 +332,7 @@
         max-width: 47px;
     }
     .header__link-phone {
-        font-size: 14px;
-        padding: 8px 10px;
+        font-size: 12px;
+        line-height: 100%;
     }
 }
