--- a/styles/components/sections/hero-section.css
+++ b/styles/components/sections/hero-section.css
@@ -121,6 +121,7 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 150%;
+    color: #303030;
     text-transform: uppercase;
     background-color: #F8F8F8;
     padding: 20px;
@@ -451,6 +452,6 @@
 }
 @media (max-width: 430px) {
     .hero-section {
-        padding-top: calc(40px + 80px);
+        padding-top: calc(40px + 84px);
     }
 }
