--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -86,6 +86,7 @@
     font-size: 18px;
     font-weight: 600;
     line-height: 24px;
+    color: #303030;
     text-transform: uppercase;
     background-color: #F8F8F8;
     padding: 20px;
