--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,9 +1,45 @@
 .header {
 }
+
+@media (min-width: 769px) {
+    .header {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        transition: top 0.3s ease;
+    }
+
+    .header.fixed {
+        position: fixed;
+        top: -100px;
+        width: 100%;
+        background-color: #FFF;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        animation: slideDown 0.3s ease forwards;
+    }
+
+    .header.fixed .header__container {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    
+
+    @keyframes slideDown {
+        from {
+            top: -100px;
+        }
+
+        to {
+            top: 0;
+        }
+    }
+}
+
 .header__container {
     padding-top: 40px;
     padding-bottom: 40px;
 }
+
 .header__desktop {
     display: flex;
     align-items: center;
@@ -145,7 +181,14 @@
     .header {
         padding: 40px 0px;
     }
+    .header.fixed {
+        padding: 20px 0px;
+    }
     .header__container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .header.fixed .header__container {
         padding-top: 0px;
         padding-bottom: 0px;
     }
@@ -154,6 +197,7 @@
 @media (max-width: 1318px) {
     .header {
         padding: 40px 0px;
+        background: #FFF;
     }
     .header__left {
         display: flex;
