--- a/styles/pages/development-center.css
+++ b/styles/pages/development-center.css
@@ -164,10 +164,10 @@
 }
 .advantage-item__buttons {
     display: flex;
-    gap: 24px;
+    gap: 60px
 }
 .advantage-item__button {
-    flex: 1 1 calc(50% - 24px)
+    flex: 1 1 calc(50% - 60px)
 }
 
 @media (max-width: 1361px) {
@@ -183,7 +183,11 @@
         margin-bottom: 35px;
     }
     .advantage-item__buttons {
-        gap: 22px;
+        display: flex;
+        gap: 50px
+    }
+    .advantage-item__button {
+        flex: 1 1 calc(50% - 50px)
     }
 }
 @media (max-width: 992px) {
@@ -208,7 +212,10 @@
         margin-bottom: 30px;
     }
     .advantage-item__buttons {
-        gap: 20px;
+        gap: 40px;
+    }
+    .advantage-item__button {
+        flex: 1 1 calc(50% - 40px)
     }
 }
 
@@ -241,6 +248,7 @@
     }
     .advantage-item__buttons {
         flex-direction: column;
+        gap: 30px;
         padding: 0px 30px;
     }
 }
@@ -275,6 +283,9 @@
     }
     .advantage-item__content {
         margin-bottom: 45px;
+    }
+    .advantage-item__buttons {
+        gap: 20px;
     }
 }
 @media (max-width: 431px) {
