--- a/styles/custom.css
+++ b/styles/custom.css
@@ -150,83 +150,65 @@
 }
 
 
-/* ЕСЛИ БЛОК НЕ ШАБЛОННЫЙ(УНИКАЛЬНЫЙ ДЛЯ СТРАНИЦЫ ПО ОФОРЛЕНИЮ) И НАХОДИТСЯ СВЕРХУ ПОД СТОРИС, НАДО ДОБАВЛЯТЬ ЕГО СЮДА НАЧИНАЯ ТОЛЬКО С ШИРИНЫ 769px */
-/* ЕСЛИ БЛОК ШАБЛОННЫЙ СНИЗУ НАПИСАНО ЧТО ДЕЛАТЬ */
-.branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .awards, .lesson-structure, .lesson-teacher, .child-age, .advantage-item {
-    padding-top: 0px;
+/* БАЗОВЫЕ СТИЛИ ДЛЯ БЛОКОВ ПОД СТОРИСАМИ */
+.--sectionPadding {
+    padding-top: 0;
 }
-
-.branches__container, .inspiration__container, .project-activity__container, .modern-tools__container, .preparing-child__container, .why-choose-us__container, .lifestyle-item__container, .dev-environment__container, .development__container, .holidays__container, .staff__container, .reviews__container, .contacts__container, .feedback__container, .simple-slider-section__container, .awards__container, .lesson-structure__container, .lesson-teacher__container, .child-age__container, .advantage-item__container {
+.--sectionPadding > [class$="__container"] {
     padding-top: 120px;
 }
 
+/* ШАБЛОННЫЕ БЛОКИ (которые могут быть и в других местах) */
+.--sectionPadding-underStories,
+.--sectionPadding-underStories > [class$="__container"] {
+    padding-top: 0;
+}
+
 @media (max-width: 1361px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .awards, .lesson-structure, .lesson-teacher, .child-age, .advantage-item {
+    .--sectionPadding {
         padding-top: 120px;
     }
-    .branches__container, .inspiration__container, .project-activity__container, .modern-tools__container, .preparing-child__container, .why-choose-us__container, .lifestyle-item__container, .dev-environment__container, .development__container, .holidays__container, .staff__container, .reviews__container, .contacts__container, .feedback__container, .simple-slider-section__container, .awards__container, .lesson-structure__container, .lesson-teacher__container, .child-age__container, .advantage-item__container {
-        padding-top: 0px;
+    .--sectionPadding > [class$="__container"] {
+        padding-top: 0;
     }
 }
 
 @media (max-width: 1281px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .awards, .lesson-structure, .lesson-teacher, .child-age, .advantage-item {
+    .--sectionPadding {
         padding-top: 115px;
     }
 }
+
 @media (max-width: 992px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .awards, .lesson-structure, .lesson-teacher, .child-age, .advantage-item {
+    .--sectionPadding {
         padding-top: 111px;
     }
 }
+
 @media (max-width: 769px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .about-info, .awards, .lesson-structure, .lesson-teacher, .why-need-school, .child-age, .advantage-item {
+    .--sectionPadding,
+    .--sectionPadding-underStories {
         padding-top: 107px;
     }
 }
+
 @media (max-width: 651px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .about-info, .awards, .lesson-structure, .lesson-teacher, .why-need-school, .child-age, .advantage-item {
+    .--sectionPadding,
+    .--sectionPadding-underStories {
         padding-top: 104px;
     }
 }
+
 @media (max-width: 551px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .about-info, .awards, .lesson-structure, .lesson-teacher, .why-need-school, .child-age, .advantage-item {
+    .--sectionPadding,
+    .--sectionPadding-underStories {
         padding-top: 95px;
     }
 }
+
 @media (max-width: 431px) {
-    .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .staff, .reviews, .contacts, .feedback, .simple-slider-section, .about-info, .awards, .lesson-structure, .lesson-teacher, .why-need-school, .child-age, .advantage-item {
-        padding-top: 90px;
-    }
-}
-
-
-/* ЕСЛИ БЛОК НАХОДИТЬСЯ ПОД СТОРИСАМИ И ОН ЯВЛЯЕТСЯ ШАБЛОННЫМ, ТО ЕСТЬ МОЖЕТ БЫТЬ НЕ ТОЛЬКО ПОД СТОРИСАМИ, А ГДЕ-ТО ВНУТРИ СТРАНИЦЫ (НАПРИМЕР, simple-slider), ТО НАДО ДОБАВИТЬ В ОБЩИЙ СПИСОК ОТСТУПОВ СВЕРХУ, НАЗНАЧИТЬ ЕМУ id(ЕСЛИ У НЕГО ЕШЁ НЕТ АТРИБУТА УНИКАЛЬНОГО)И ДОПОЛНИТЕЛЬНЮ ДОБАВИТЬ СЮДА ПО id */
-/* В ОБЩИЙ СПИСОК ОТСТУПОВ ДОБАВЛЯТЬ БЕЗ id */
-.simple-slider-section[data-simpleSlider-id="slider1"], .advantage-item[data-advantageBlock-id="educational-lessons"] {
-    padding-top: 0;
-}
-.simple-slider-section[data-simpleSlider-id="slider1"] .simple-slider-section__container, .advantage-item[data-advantageBlock-id="educational-lessons"] .advantage-item__container {
-    padding-top: 0;
-}
-
-@media (max-width: 769px) {
-    .simple-slider-section[data-simpleSlider-id="slider1"], .advantage-item[data-advantageBlock-id="educational-lessons"] {
-        padding-top: 107px;
-    }
-}
-@media (max-width: 651px) {
-    .simple-slider-section[data-simpleSlider-id="slider1"], .advantage-item[data-advantageBlock-id="educational-lessons"] {
-        padding-top: 104px;
-    }
-}
-@media (max-width: 551px) {
-    .simple-slider-section[data-simpleSlider-id="slider1"], .advantage-item[data-advantageBlock-id="educational-lessons"] {
-        padding-top: 95px;
-    }
-}
-@media (max-width: 431px) {
-    .simple-slider-section[data-simpleSlider-id="slider1"], .advantage-item[data-advantageBlock-id="educational-lessons"] {
+    .--sectionPadding,
+    .--sectionPadding-underStories {
         padding-top: 90px;
     }
 }
