--- a/styles/pages/blog.css
+++ b/styles/pages/blog.css
@@ -92,6 +92,13 @@
     position: relative;
     cursor: pointer;
 }
+.article-list__item-inner {
+    display: block;
+    height: 100%;
+}
+.article-list__item-inner:hover {
+    color: #303030;
+}
 .articles-list__item:hover {
     filter: brightness(0.9);
 }
