--- a/styles/reset.css
+++ b/styles/reset.css
@@ -28,24 +28,21 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url("../assets/fonts/Montserrat/Montserrat-Regular.woff2") format("woff2"),
-        url("../assets/fonts/Montserrat/Montserrat-Regular.woff") format("woff");
+    src: url("../assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    src: url("../assets/fonts/Montserrat/Montserrat-Medium.woff2") format("woff2"),
-        url("../assets/fonts/Montserrat/Montserrat-Medium.woff") format("woff");
+    src: url("../assets/fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    src: url("../assets/fonts/Montserrat/Montserrat-SemiBold.woff2") format("woff2"),
-        url("../assets/fonts/Montserrat/Montserrat-SemiBold.woff") format("woff");
+    src: url("../assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
 }
 
 html,
