--- a/styles/components/sections/hero-section.css
+++ b/styles/components/sections/hero-section.css
@@ -77,8 +77,8 @@
 .hero-section__text {
     font-size: 16px;
     line-height: 130%;
-    max-width: 504px;
-    width: 504px;
+    max-width: 510px;
+    width: 510px;
 }
 .hero-section__list {
     display: flex;
@@ -163,6 +163,18 @@
     z-index: 2;
     opacity: .1;
 }
+.hero-section__desc-img-wrap {
+    max-height: 255px;
+    border-radius: 24px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+.hero-section__desc-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .hero-section__right-content {
     width: 610px;
     max-height: 540px;
@@ -236,6 +248,9 @@
         width: 240px;
         height: 120px;
         font-size: 16px;
+    }
+    .hero-section__desc-img-wrap {
+        max-height: 210px;
     }
     .hero-section__right-content {
         width: 100%;
@@ -375,6 +390,10 @@
         top: -138px;
         left: 0px;
     }
+    .hero-section__desc-img-wrap {
+        max-height: 255px;
+        width: 100%;;
+    }
     .hero-section__right-content > .hero-section__title {
         font-size: 30px;
         margin-bottom: 31px;
@@ -428,7 +447,6 @@
     }
     .hero-section__text {
         font-size: 14px;
-        line-height: 120%;
     }
     .hero-section__list-item {
         font-size: 14px;
