--- a/styles/components/sections/reviews.css
+++ b/styles/components/sections/reviews.css
@@ -1,22 +1,25 @@
 .reviews {
     position: relative;
 }
+
 .reviews__background-img {
     position: absolute;
     top: 0;
     right: 117px;
     z-index: 3;
 }
-.main__reviews {
-}
+
+.main__reviews {}
+
 .reviews__container {
     position: relative;
     z-index: 5;
 }
-.reviews__title {
-}
-.reviews__content {
-}
+
+.reviews__title {}
+
+.reviews__content {}
+
 .reviews__content-inner {
     padding: 40px;
     border-radius: 24px;
@@ -26,29 +29,34 @@
     background-color: #F6F6F6;
     border-radius: 24px;
 }
+
 .reviews__content:not(:last-child) {
     margin-bottom: 24px;
 }
+
 .reviews__content-title {
     font-size: 24px;
     line-height: 130%;
     max-width: 361px;
 }
+
 .reviews__slider {
     position: relative;
 }
-.reviews__swiper {
-}
-.reviews__swiper-wrapper {
-}
-.reviews__swiper-slide {
-}
+
+.reviews__swiper {}
+
+.reviews__swiper-wrapper {}
+
+.reviews__swiper-slide {}
+
 .reviews__slide {
     user-select: none;
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
+
 .reviews__slide-img-wrap {
     height: 300px;
     width: 381px;
@@ -57,6 +65,7 @@
     position: relative;
     cursor: pointer;
 }
+
 .reviews__slide-img-wrap:hover::after {
     content: '';
     height: 100%;
@@ -66,11 +75,13 @@
     left: 0;
     background-color: rgba(255, 255, 255, 0.068);
 }
+
 .reviews__slide-img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 .reviews .--video-poster::before {
     top: 20px;
     right: 20px;
@@ -79,28 +90,33 @@
     width: 42px;
     height: 42px;
 }
+
 .reviews .--video-poster:hover::before {
     transform: scale(1.05);
     transition: all 0.3s ease;
 }
+
 .reviews__slide-img-wrap:hover path {
     fill: #2f3f1d;
 }
+
 .reviews__slide-text {
     font-size: 16px;
     font-weight: 400;
     line-height: 120%;
     color: #4E6932;
 }
-.reviews__swiper-button-prev {
-}
-.reviews__swiper-button-next {
-}
-.reviews__feedback-block {
-}
+
+.reviews__swiper-button-prev {}
+
+.reviews__swiper-button-next {}
+
+.reviews__feedback-block {}
+
 .reviews__swiper-navigation {
     top: -97px;
 }
+
 .rewiews__swiper-pagination {
     display: none;
     font-size: 32px;
@@ -109,31 +125,172 @@
     position: static;
     width: auto;
 }
+
 .rewiews__swiper-controls {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 
+
+.reviews__map-widgets {}
+
+.--map-widgets .reviews__map-widgets {
+    margin-bottom: 40px;
+}
+
+.map-widgets {
+    display: none;
+}
+
+.--map-widgets .map-widgets {
+    display: block;
+    padding-top: 40px;
+}
+
+.map-widgets__items {
+    display: flex;
+    gap: 24px;
+}
+
+.map-widgets__widget {
+    padding: 40px;
+    background-color: #F6F6F6;
+    border-radius: 24px;
+    flex: 1 1 50%;
+}
+
+.map-widgets__widget-inner {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.map-widgets__widget-texts {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.map-widgets__widget-rating {
+    display: flex;
+    gap: 16px;
+}
+
+.map-widgets__widget-number {
+    padding-top: 3px;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 120%;
+    color: #4E6932;
+}
+
+.map-widgets__widget-rating-text {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 130%;
+    max-width: 194px;
+}
+
+.map-widgets__widget-text-link {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 130%;
+    max-width: 196px;
+    color: #4E6932;
+}
+
+.map-widgets__widget-icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.map-widgets__widget-stars-wrap {
+    max-width: 222px;
+}
+
+.map-widgets__widget-stars-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.map-widgets__widget-map-logo-wrap {
+    max-height: 32px;
+}
+
+.map-widgets__widget-map-logo-img {
+    height: 100%;
+    object-fit: cover;
+}
+
 @media (max-width: 1341px) {
     .reviews__content:not(:last-child) {
         margin-bottom: 30px;
     }
+
     .reviews__content-inner {
         padding: 35px;
         gap: 35px;
     }
+
     .reviews__content-title {
         font-size: 22px;
         max-width: 340px;
     }
+
     .reviews__slide-img-wrap {
         height: auto;
         width: auto;
         aspect-ratio: 381 / 300;
     }
+
     .reviews__slide {
         gap: 20px;
+    }
+
+    .map-widgets__widget {
+        padding: 35px;
+    }
+
+    .map-widgets__widget-rating-text {
+        font-size: 15px;
+    }
+
+    .map-widgets__widget-stars-wrap {
+        max-width: 170px;
+    }
+
+    .map-widgets__widget-map-logo-wrap {
+        max-height: 28px;
+    }
+}
+
+@media (max-width: 1131px) {
+    .--map-widgets .map-widgets {
+        padding-top: 30px;
+    }
+
+    .map-widgets__widget-rating-text {
+        font-size: 14px;
+    }
+
+    .map-widgets__widget-number {
+        font-size: 32px;
+    }
+
+    .map-widgets__widget-text-link {
+        font-size: 13px;
+    }
+
+    .map-widgets__widget-stars-wrap {
+        max-width: 140px;
+    }
+
+    .map-widgets__widget-map-logo-wrap {
+        max-height: 25px;
     }
 }
 
@@ -141,12 +298,42 @@
     .reviews__content:not(:last-child) {
         margin-bottom: 50px;
     }
+
     .reviews__content-inner {
         padding: 30px;
         gap: 30px;
     }
+
     .reviews__swiper-navigation {
         top: -85px;
+    }
+
+    .map-widgets__widget {
+        padding: 30px;
+    }
+
+    .map-widgets__items {
+        flex-direction: column;
+    }
+
+    .map-widgets__widget-rating-text {
+        font-size: 15px;
+    }
+
+    .map-widgets__widget-number {
+        font-size: 34px;
+    }
+
+    .map-widgets__widget-text-link {
+        font-size: 14px;
+    }
+
+    .map-widgets__widget-stars-wrap {
+        max-width: 180px;
+    }
+
+    .map-widgets__widget-map-logo-wrap {
+        max-height: 30px;
     }
 }
 
@@ -154,6 +341,7 @@
     .reviews__container {
         padding: 0px;
     }
+
     /* .reviews__content {
         padding: 30px;
         gap: 30px;
@@ -162,70 +350,90 @@
         padding: 30px;
         gap: 30px;
     }
+
     .reviews__content:not(:last-child) {
         margin-bottom: 60px;
     }
+
     .reviews__title {
         padding-left: 30px;
     }
+
     .reviews__content-title {
         font-size: 20px;
     }
+
     .reviews__slide {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .reviews__slide > a {
+
+    .reviews__slide>a {
         order: 2;
     }
+
     .reviews__slide-img-wrap {
         height: 320px;
         width: 100%;
         max-width: 430px;
         order: 2;
     }
+
     .reviews__slide-text {
         order: 1;
     }
+
     .reviews__swiper-navigation {
         top: -80px;
     }
 
+    .--map-widgets .map-widgets {
+        padding-top: 20px;
+    }
+
+    .map-widgets__items {
+        gap: 22px;
+    }
 }
 
-@media (max-width: 651px) {
-    
-}
+@media (max-width: 651px) {}
 
 @media (max-width: 551px) {
     .reviews__content {
         padding: 0;
         gap: 30px;
     }
+
     .reviews__content:not(:last-child) {
         margin-bottom: 75px;
     }
+
     .reviews__content-inner {
         padding: 0;
         gap: 30px;
         background-color: transparent;
     }
+
     .reviews__content-title {
         padding-left: 30px;
     }
+
     .rewiews__swiper-controls {
         position: absolute;
         margin-bottom: 0;
         width: auto;
         bottom: 10px;
     }
+
     .rewiews__swiper-pagination {
         display: block;
     }
+
     .reviews__swiper-navigation {
         display: none;
     }
+
     .reviews__slider {
         max-height: none;
         background-color: #F6F6F6;
@@ -235,14 +443,66 @@
         align-items: center;
         border-radius: 24px;
     }
+
     .reviews__slide-img-wrap {
         height: auto;
     }
+
     .reviews__slide-text {
         font-size: 15px;
     }
+
     .rewiews__swiper-controls {
         margin-bottom: 30px;
+    }
+
+    .--map-widgets .reviews__map-widgets {
+        margin-bottom: 30px;
+    }
+
+    .--map-widgets .map-widgets {
+        padding-top: 0px;
+    }
+
+    .map-widgets__items {
+        gap: 20px;
+    }
+
+    .map-widgets__widget-rating-text {
+        font-size: 14px;
+    }
+
+    .map-widgets__widget-number {
+        padding-top: 2px;
+        font-size: 32px;
+    }
+
+    .map-widgets__widget-text-link {
+        font-size: 12px;
+    }
+
+    .map-widgets__widget-stars-wrap {
+        max-width: 165px;
+    }
+
+    .map-widgets__widget-map-logo-wrap {
+        max-height: 24px;
+    }
+}
+
+@media (max-width: 471px) {
+    .map-widgets__widget-inner {
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+
+    .map-widgets__widget-icons {
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .map-widgets__widget-map-logo-wrap {
+        max-width: 110px;
     }
 }
 
@@ -250,9 +510,11 @@
     .reviews__content:not(:last-child) {
         margin-bottom: 90px;
     }
+
     .reviews__slide {
         align-items: flex-start;
     }
+
     .reviews__slide-text {
         font-size: 14px;
     }
