--- a/styles/pages/kindergarten-page.css
+++ b/styles/pages/kindergarten-page.css
@@ -344,65 +344,99 @@
     position: relative;
     z-index: 3;
 }
-.lifestyle__main {
-}
+
+.lifestyle__main {}
+
 .lifestyle__background-img {
     position: absolute;
     top: -419px;
     left: 0px;
     z-index: 3;
 }
+
 .lifestyle__items {
     position: relative;
     z-index: 5;
 }
-.lifestyle__block-item {
-}
+
+.lifestyle__block-item {}
 
 
 /* БЛОКИ ВНУТРИ ГРУППЫ СТИЛЬ ЖИЗНИ */
-.lifestyle-item {
-}
+.lifestyle-item {}
+
 .lifestyle-item:nth-of-type(even) .lifestyle-item__slider {
     order: 2;
 }
+
 .lifestyle-item:nth-of-type(even) .lifestyle-item__body {
     order: 1;
-}  
+}
+
 .lifestyle-item__container {
     display: flex;
     gap: 92px;
 }
-.lifestyle-item__container {
 
-}
+.lifestyle-item__container {}
+
 .lifestyle-item__slider {
     max-height: 600px;
     max-width: 560px;
     position: relative;
 }
-.lifestyle-item__swiper {
+
+.lifestyle-block__swiper-controls {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
-.lifestyle-item__swiper-wrapper {
+
+.lifestyle-block__swiper-navigation {
+    top: 50%;
+    width: 100%;
 }
+
+.lifestyle-block__swiper-navigation .swiper-button-prev {
+    right: 20px;
+}
+
+.lifestyle-block__swiper-navigation .swiper-button-next {
+    left: 20px;
+}
+
+.lifestyle-block__swiper-navigation .swiper-button-prev,
+.lifestyle-block__swiper-navigation .swiper-button-next {
+    height: 52px;
+    width: 52px;
+}
+
+.lifestyle-item__swiper {}
+
+.lifestyle-item__swiper-wrapper {}
+
 .lifestyle-item__swiper-slide {
     border-radius: 24px;
     overflow: hidden;
 }
+
 .lifestyle-item__slide {
     max-width: 560px;
     max-height: 600px;
 }
+
 .lifestyle-item__slide-img-wrap {
     height: 600px;
     width: 560px;
 }
+
 .lifestyle-item__slide-img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
-.lifestyle-item__texts > .swiper-navigation {
+
+.lifestyle-item__texts>.swiper-navigation {
     top: auto;
     bottom: 0;
     left: 0;
@@ -410,224 +444,280 @@
     display: flex;
     position: relative;
 }
-.lifestyle-item__swiper-button-prev, .lifestyle-item__swiper-button-next {
+
+.lifestyle-item__swiper-button-prev,
+.lifestyle-item__swiper-button-next {
     top: auto;
     position: static;
     bottom: 0;
 }
-.lifestyle-item__swiper-button-prev {
-}
-.lifestyle-item__swiper-button-next {
-}
+
+.lifestyle-item__swiper-button-prev {}
+
+.lifestyle-item__swiper-button-next {}
+
 .lifestyle-item__swiper-pagination {
     position: absolute;
-    bottom: 32px!important;
+    bottom: 32px !important;
 }
+
 .lifestyle-item__body {
     position: relative;
 }
+
 .lifestyle-item__title {
     margin-bottom: 80px;
 }
+
 .lifestyle-item__texts {
     max-width: 562px;
 }
+
 .lifestyle-item__pre-title {
     font-size: 24px;
     line-height: 130%;
     margin-bottom: 40px;
 }
+
 .lifestyle-item__text {
     font-size: 16px;
     line-height: 130%;
     max-width: 518px;
     margin-bottom: 48px;
 }
+
 .lifestyle-item__swiper-notes {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
+
 .lifestyle-item__footnote {
     font-size: 14px;
     line-height: 130%;
     color: #4E6932;
 }
+
 .lifestyle-item__swiper-navigation {
     position: static;
 }
+
 .lifestyle-item__pre-title-mobile {
     display: none;
 }
+
 .lifestyle-item__footnote-mobile {
     display: none;
 }
 
-@media (max-width: 1341px) {
+@media (max-width: 1341px) {}
 
-}
 @media (max-width: 1281px) {
     .lifestyle-item__container {
         gap: 78px;
     }
+
     .lifestyle-item__slider {
         max-height: 580px;
         max-width: 500px;
     }
+
     .lifestyle-item__slide {
         max-width: none;
         max-height: none;
         width: 100%;
         height: 100%;
     }
+
     .lifestyle-item__slide-img-wrap {
         width: 100%;
         height: 100%;
     }
+
     .lifestyle-item__title {
         margin-bottom: 60px;
         font-size: 38px;
     }
+
     .lifestyle-item__texts {
         max-width: 490px;
     }
+
     .lifestyle-item__pre-title {
         font-size: 22px;
         margin-bottom: 35px;
     }
+
     .lifestyle-item__text {
         font-size: 15px;
         margin-bottom: 45px;
     }
+
     .lifestyle-item__swiper-notes {
         gap: 18px;
     }
 }
+
 @media (max-width: 1100px) {
     .lifestyle-item__container {
         gap: 50px;
         justify-content: space-between;
     }
 }
+
 @media (max-width: 992px) {
     .lifestyle-item__container {
         gap: 50px;
         flex-direction: column;
     }
+
     .lifestyle-item .lifestyle-item__slider {
         order: 2;
     }
-    
+
     .lifestyle-item .lifestyle-item__body {
         order: 1;
     }
+
     .lifestyle-item__slider {
         max-height: none;
         max-width: none;
         width: 100%;
     }
+
+    .lifestyle-block__swiper-navigation {
+        display: none;
+    }
+
     .lifestyle-item__swiper {
         overflow: visible;
     }
+
     .lifestyle-item__swiper-pagination {
         display: none;
     }
+
     .lifestyle-item__slide {
         height: auto;
         width: auto;
         aspect-ratio: 560 / 600;
     }
+
     .lifestyle-item__title {
         margin-bottom: 50px;
         font-size: 35px;
     }
+
     .lifestyle-item__texts {
         max-width: 640px;
     }
+
     .lifestyle-item__text {
         max-width: none;
     }
 }
+
 @media (max-width: 769px) {
     .lifestyle-item__container {
         padding: 0px;
     }
+
     .lifestyle-item__body {
         padding: 0px 30px;
     }
+
     .lifestyle-item__title {
         font-size: 46px;
     }
+
     .lifestyle-item__slider {
         padding: 23px 30px 30px 30px;
         background-color: #F8F8F8;
     }
+
     .lifestyle-item__swiper {
         margin-bottom: 30px;
     }
+
     .lifestyle-item__slide {
         aspect-ratio: 628 / 540;
     }
+
     .lifestyle-item__pre-title-mobile {
         display: block;
         font-size: 20px;
         line-height: 130%;
         color: #4E6932;
     }
+
     .lifestyle-item__footnote-mobile {
         display: block;
     }
+
     .lifestyle-item__swiper-navigation {
         display: none;
     }
+
     .lifestyle-item__footnote-mobile {
         font-size: 15px;
         line-height: 130%;
         color: #4E6932;
         margin-bottom: 18px;
     }
+
     .lifestyle-item__pre-title {
         display: none;
     }
+
     .lifestyle-item__text {
         margin-bottom: 0;
     }
+
     .lifestyle-item__footnote {
         display: none;
     }
 }
+
 @media (max-width: 651px) {
     .lifestyle-item__swiper {
         margin-bottom: 25px;
     }
+
     .lifestyle-item__title {
         font-size: 38px;
         margin-bottom: 48px;
     }
+
     .lifestyle-item__container {
         gap: 48px;
     }
 }
+
 @media (max-width: 551px) {
     .lifestyle-item__swiper {
         margin-bottom: 20px;
     }
+
     .lifestyle-item__footnote-mobile {
         font-size: 14px;
         margin-bottom: 16px;
         max-width: 260px;
     }
+
     .lifestyle-item__container {
         gap: 45px;
     }
+
     .lifestyle-item__title {
         font-size: 35px;
         margin-bottom: 45px;
     }
+
     .lifestyle-item__text {
         font-size: 14px;
     }
 }
+
 @media (max-width: 431px) {
     .lifestyle-item__title {
         font-size: 32px;
@@ -638,25 +728,29 @@
 /* БЛОК ДЛЯ ОПИСАНИЯ БЛОКОВ С ВЫПАДАЮЩИМ ТЕКСТОМ ПО КНОПКЕ */
 .avantage-descripion {
     display: flex;
-    margin-bottom: 80px!important;
+    margin-bottom: 80px !important;
 }
+
 .avantage-descripion__title {
     margin-bottom: 0px;
     margin-right: 72px;
     max-width: 580px;
     width: 100%;
 }
+
 .avantage-descripion__texts {
     margin-top: 7px;
     margin-right: 20px;
     width: 100%;
 }
+
 .avantage-descripion__pre-title {
     font-size: 24px;
     line-height: 130%;
     margin-bottom: 24px;
     max-width: 424px;
 }
+
 .avantage-descripion__pre-title-mobile {
     display: none;
     font-size: 20px;
@@ -664,28 +758,34 @@
     line-height: 130%;
     color: #4E6932;
 }
-.avantage-descripion__accordion {
-}
+
+.avantage-descripion__accordion {}
+
 .avantage-descripion__accordion-content {
     max-width: 410px;
 }
-.avantage-descripion__accordion-content-visible {
-}
+
+.avantage-descripion__accordion-content-visible {}
+
 .avantage-descripion__accordion-visible-text {
     font-size: 16px;
     line-height: 130%;
     margin-bottom: 24px;
 }
+
 .avantage-descripion__accordion-button {
     padding-top: 17px;
     padding-bottom: 17px;
 }
+
 .avantage-descripion__accordion-button:hover .avantage-description__accordion-button-img {
     transform: rotate(90deg);
 }
+
 .avantage-description__accordion-button-img {
     transition: transform .2s;
 }
+
 .avantage-descripion__accordion-content-hidden {
     font-size: 16px;
     line-height: 130%;
@@ -693,7 +793,8 @@
     overflow: hidden;
     transition: max-height 600ms;
 }
-.avantage-descripion__accordion-content-hidden.open + .avantage-descripion__accordion-button:hover .avantage-description__accordion-button-img {
+
+.avantage-descripion__accordion-content-hidden.open+.avantage-descripion__accordion-button:hover .avantage-description__accordion-button-img {
     transform: rotate(-90deg);
 }
 
@@ -701,117 +802,139 @@
     .avantage-descripion__pre-title {
         font-size: 22px;
     }
-    .avantage-descripion__accordion-visible-text, .avantage-descripion__accordion-content-hidden {
+
+    .avantage-descripion__accordion-visible-text,
+    .avantage-descripion__accordion-content-hidden {
         font-size: 15px;
     }
+
     .preparing-child__description {
         margin-bottom: 70px;
     }
 }
+
 @media (max-width: 1281px) {
     .avantage-descripion {
-        margin-bottom: 60px!important;
+        margin-bottom: 60px !important;
     }
 }
-@media (max-width: 992px) {
-}
+
+@media (max-width: 992px) {}
+
 @media (max-width: 902px) {
     .avantage-descripion__title {
         margin-right: 0px;
     }
+
     .avantage-descripion {
-        margin-bottom: 50px!important;
+        margin-bottom: 50px !important;
         gap: 50px;
         flex-direction: column;
     }
+
     .avantage-descripion__texts {
         margin-top: 0px;
         margin-right: 00px;
     }
+
     .avantage-descripion__pre-title {
         font-size: 24px;
         line-height: 130%;
         margin-bottom: 24px;
         max-width: 580px;
     }
+
     .avantage-descripion__accordion-content {
         max-width: 580px;
     }
+
     .avantage-descripion__pre-title {
         font-size: 20px;
         margin-bottom: 28px;
     }
 }
+
 @media (max-width: 769px) {
     .avantage-descripion__pre-title {
         display: none;
     }
+
     .avantage-descripion__pre-title-mobile {
         display: block;
     }
+
     .avantage-descripion__accordion-content-visible {
         display: flex;
         flex-direction: column;
     }
+
     .avantage-descripion__accordion-button {
         align-self: center;
     }
-    
+
 }
+
 @media (max-width: 651px) {
     .avantage-descripion {
-        margin-bottom: 48px!important;
+        margin-bottom: 48px !important;
         gap: 48px;
     }
 }
+
 @media (max-width: 551px) {
     .avantage-descripion {
-        margin-bottom: 45px!important;
+        margin-bottom: 45px !important;
         gap: 45px;
     }
-    .avantage-descripion__accordion-visible-text, .avantage-descripion__accordion-content-hidden {
+
+    .avantage-descripion__accordion-visible-text,
+    .avantage-descripion__accordion-content-hidden {
         font-size: 14px;
     }
 }
 
-@media (max-width: 431px) {
-}
+@media (max-width: 431px) {}
 
 
 /* БЛОК ВСЕСТОРОННЕЕ РАЗВИТИЕ */
 .development {
     position: relative;
 }
-.main__development {
-}
+
+.main__development {}
+
 .development__background-img {
     position: absolute;
     top: 318px;
     left: 0px;
     z-index: 3;
 }
+
 .development__container {
     position: relative;
     z-index: 5;
 }
+
 .development__description {
     margin-bottom: 50px;
 }
-.development__content {
-}
+
+.development__content {}
+
 .development__slider {
     max-width: 1280px;
     width: 100%;
     margin-bottom: 24px;
 }
-.development__swiper {
-}
-.development__swiper-wrapper {
-}
-.development__swiper-slide {
-}
-.development__slide {
-}
+
+.development__swiper {}
+
+.development__swiper-wrapper {}
+
+.development__swiper-slide {}
+
+.development__slide {}
+
 .development__image-card-title {
     line-height: 130%;
     color: #4E6932;
@@ -819,17 +942,20 @@
     padding: 4px 0px;
     margin-bottom: 20px;
 }
+
 .development__image-card-img-wrap {
     height: 540px;
     width: 100%;
     border-radius: 24px;
     overflow: hidden;
 }
+
 .development__image-card-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .development__buttons {
     border-radius: 24px;
     background-color: rgba(248, 248, 248, 1);
@@ -838,6 +964,7 @@
     flex-wrap: wrap;
     gap: 24px;
 }
+
 .development__button {
     flex: 1 0 calc(33.333% - 24px);
     max-width: 389px;
@@ -849,9 +976,11 @@
     justify-content: flex-start;
     position: relative;
 }
+
 .development__button_isIndivid {
     position: relative;
 }
+
 .development__button_isIndivid::after {
     content: 'индивидуально';
     display: flex;
@@ -869,21 +998,28 @@
     top: 0;
     right: -10px;
 }
+
 .development__button-img {
     margin-right: 40px;
     height: 32px;
     width: 32px;
 }
-.development__button:hover, .development__button:focus, .development__button:active, .development__button.active  {
-    color: #4E6932!Important;
-    background-color: #C7D8A5!Important;
+
+.development__button:hover,
+.development__button:focus,
+.development__button:active,
+.development__button.active {
+    color: #4E6932 !Important;
+    background-color: #C7D8A5 !Important;
 }
+
 .development__image-card-img-wrap {
     height: 480px;
     width: 100%;
     border-radius: 24px;
     overflow: hidden;
 }
+
 .development__slide-popup {
     display: none;
     /* opacity: 0;
@@ -904,59 +1040,69 @@
     max-width: 351px;
     width: 100%;*/
 }
+
 /* .development__button:hover .development__slide-popup {
     display: block;
     opacity: 1;
 } */
 
-@media (max-width: 1341px) {
+@media (max-width: 1341px) {}
 
-}
 @media (max-width: 1281px) {
     .development__image-card-img-wrap {
         height: 480px;
     }
 }
+
 @media (max-width: 992px) {
     .development__image-card-img-wrap {
         height: 430px;
     }
+
     .development__buttons {
         padding: 30px 22px;
         gap: 18px;
     }
+
     .development__button {
         flex: 1 1 calc(50% - 18px);
         max-width: none;
         padding: 24px 31px;
     }
 }
+
 @media (max-width: 769px) {
     .development__container {
         padding: 0px;
     }
+
     .development__description {
         padding: 0px 30px;
     }
+
     .development__content {
         display: flex;
         flex-direction: column;
     }
+
     .development__slide-popup {
         font-size: 16px;
         padding: 15px;
         bottom: -95px;
     }
+
     .development__slider {
         margin-bottom: 0px;
         order: 2;
         padding: 30px;
         background-color: rgba(248, 248, 248, 1);
     }
+
     .development__image-card-title {
         padding: 0px;
         margin-bottom: 18px;
     }
+
     .development__buttons {
         padding: 0px 30px;
         gap: 18px;
@@ -964,6 +1110,7 @@
         order: 1;
         margin-bottom: 50px;
     }
+
     .development__button {
         flex: 1 1 calc(100% - 18px);
         font-size: 18px;
@@ -972,54 +1119,194 @@
         justify-content: center;
         border: 1px solid rgba(78, 105, 50, 1);
     }
-    .development__button:hover, .development__button:focus, .development__button:active, .development__button.active  {
-        border: 1px solid #C7D8A5!important;
+
+    .development__button:hover,
+    .development__button:focus,
+    .development__button:active,
+    .development__button.active {
+        border: 1px solid #C7D8A5 !important;
     }
+
     .development__button-img {
         margin-right: 20px;
     }
 }
+
 @media (max-width: 651px) {
     .development__image-card-img-wrap {
         height: 390px;
     }
+
     .development__buttons {
         gap: 20px;
         margin-bottom: 48px;
     }
+
     .development__button {
         font-size: 16px;
         padding: 18px;
     }
+
     .development__slide-popup {
         font-size: 15px;
         bottom: -95px;
     }
 }
+
 @media (max-width: 551px) {
     .development__image-card-img-wrap {
         height: 275px;
     }
+
     .development__buttons {
         margin-bottom: 45px;
     }
+
     .development__image-card-title {
         margin-bottom: 16px;
     }
+
     .development__button {
         font-size: 16px;
         padding: 9px;
     }
+
     .development__slide-popup {
         font-size: 14px;
         bottom: -110px;
         max-width: 250px;
     }
+
     .development__button_isIndivid::after {
         transform: rotate(4deg);
         top: -10px;
     }
 }
-@media (max-width: 431px) {
 
+@media (max-width: 431px) {}
+
+
+/* БЛОК КАК К НАМ ПОПАСТЬ */
+.how-to-get {}
+
+.how-to-get__container {}
+
+.how-to-get__title {}
+
+.how-to-get__items {
+    display: flex;
+    gap: 60px;
 }
+
+.how-to-get__item {
+    padding: 32px;
+    background-color: #F6F6F6;
+    border-radius: 16px;
+    flex: 1 1 25%;
+    height: 300px;
+    position: relative;
+}
+
+.how-to-get__item-icon-wrap {
+    position: absolute;
+    top: 32px;
+    right: 32px;
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.how-to-get__item-icon {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.how-to-get__item-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    gap: 54px;
+}
+
+.how-to-get__item-number {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 120%;
+    color: #CFCFCF;
+}
+
+.how-to-get__item-text {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 130%;
+    color: #303030;
+}
+
+@media (max-width: 1341px) {
+    .how-to-get__items {
+        gap: 40px;
+    }
+
+    .how-to-get__item {
+        height: auto;
+    }
+}
+
+@media (max-width: 1281px) {
+    .how-to-get__items {
+        gap: 20px;
+    }
+
+    .how-to-get__item-icon-wrap {
+        max-width: 80px;
+        max-height: 80px;
+    }
+}
+
+@media (max-width: 1120px) {
+    .how-to-get__item-text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 992px) {
+    .how-to-get__items {
+        gap: 50px;
+        flex-wrap: wrap;
+    }
+
+    .how-to-get__item {
+        flex: 1 1 calc(50% - 50px);
+    }
+
+    .how-to-get__item-icon-wrap {
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    .how-to-get__item-text {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 769px) {
+    .how-to-get__items {
+        gap: 45px;
+    }
+
+    .how-to-get__item {
+        flex: 1 1 calc(50% - 45px);
+    }
+}
+
+@media (max-width: 651px) {
+    .how-to-get__item {
+        flex: 1 1 calc(100% - 45px);
+        min-height: 240px;
+    }
+}
+
+@media (max-width: 551px) {}
+
+@media (max-width: 431px) {}
