--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -947,9 +947,24 @@
     max-width: 560px;
     position: relative;
 }
-.lifestyle-item__swiper {
+.lifestyle-block__swiper-controls {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
-.lifestyle-item__swiper-wrapper {
+.lifestyle-block__swiper-navigation {
+    top: 50%;
+    width: 100%;
+}
+.lifestyle-block__swiper-navigation .swiper-button-prev {
+    right: 20px;
+}
+.lifestyle-block__swiper-navigation .swiper-button-next {
+left: 20px;
+}
+.lifestyle-block__swiper-navigation .swiper-button-prev , .lifestyle-block__swiper-navigation .swiper-button-next {
+    height: 52px;
+    width: 52px;
 }
 .lifestyle-item__swiper-slide {
     border-radius: 24px;
@@ -1091,6 +1106,9 @@
         max-height: none;
         max-width: none;
         width: 100%;
+    }
+    .lifestyle-block__swiper-navigation {
+        display: none;
     }
     .lifestyle-item__swiper {
         overflow: visible;
