--- a/styles/pages/news.css
+++ b/styles/pages/news.css
@@ -59,6 +59,13 @@
     color: #FFF!important;
     background-color: #4E6932!important;
 }
+.news-list__item-inner {
+    display: block;
+    height: 100%;
+}
+.news-list__item-inner:hover {
+    color: #303030;
+}
 .news-list__item-img {
     width: 100%;
     height: 100%;
